--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,51 @@
-# ===== Core =====
+# ================================
+# Core da aplicação (FastAPI)
+# ================================
 fastapi==0.128.0
-uvicorn==0.40.0
 starlette==0.50.0
+uvicorn==0.40.0
 
-# ===== Banco de dados =====
+# ================================
+# ORM / Banco de dados
+# ================================
 SQLAlchemy==2.0.45
-sqlmodel==0.0.24
+sqlmodel==0.0.22
 greenlet==3.3.0
 
-# ===== Autenticação e segurança =====
+# ================================
+# Validação e modelos
+# ================================
+pydantic==2.12.5
+pydantic-core==2.41.5
+pydantic-settings==2.12.0
+email-validator==2.1.1
+
+# ================================
+# Autenticação e segurança
+# ================================
 python-jose==3.5.0
 passlib==1.7.4
-bcrypt==5.0.0
-ecdsa==0.19.1
-rsa==4.9.1
-pyasn1==0.6.1
-six==1.17.0
+bcrypt==4.1.2
 
-# ===== Validação e configuração =====
-pydantic==2.12.5
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-email-validator==2.2.0
-annotated-types==0.7.0
-typing_extensions==4.15.0
-typing-inspection==0.4.2
-
-# ===== Utilidades =====
+# ================================
+# Variáveis de ambiente
+# ================================
 python-dotenv==1.2.1
-python-multipart==0.0.9
+
+# ================================
+# Async / ASGI
+# ================================
 anyio==4.12.1
 h11==0.16.0
+
+# ================================
+# Utilidades e compatibilidade
+# ================================
+typing-extensions==4.15.0
+typing-inspection==0.4.2
 idna==3.11
+six==1.17.0
 click==8.3.1
 colorama==0.4.6
+annotated-types==0.7.0
+annotated-doc==0.0.4
