--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=sqlite:///./test.db 
 API_PREFIX=/api 
 DEBUG=True 
-ALLOWED_ORIGINS=http://localhost:8000, http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:8000, http://localhost:5173, https://front-end-certin-app.vercel.app
